Korjauksia päätösten tallennukseen, kutsun lähetykseen.
Päätös osaksi rekisteröinnin modelia tallennuksen korjaamiseksi.
Erillinen RekisterointiDto validointiongelmien väistämiseksi.
Testit finalizereille.