@@ -1,7 +1,7 @@
 package fi.vm.sade.varda.rekisterointi.model;
 
 import java.time.LocalDate;
-import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.Set;
 
 public class TestiRekisterointi {
@@ -11,19 +11,16 @@ public class TestiRekisterointi {
     }
 
     public static Rekisterointi rekisterointi(Kayttaja kayttaja) {
-        return new Rekisterointi(
-                null,
+        return Rekisterointi.of(
                 Organisaatio.of("0000000-1", null, LocalDate.now(),
                         KielistettyNimi.of("Testiyritys", "fi", LocalDate.now()),
                         "yritysmuoto_26", Set.of("organisaatiotyyppi_07"), "kunta_091",
                         "maatjavaltiot1_fin", Set.of("oppilaitoksenopetuskieli_1#1"),
                         Yhteystiedot.of("101234567", "testi@testiyritys.fi", Osoite.TYHJA, Osoite.TYHJA)),
                 "vardatoimintamuoto_tm01",
-                Set.of("kunta_091"),
-                Set.of("testi@testiyritys.fi"),
-                kayttaja,
-                LocalDateTime.now(),
-                Rekisterointi.Tila.KASITTELYSSA
+                Collections.singleton("Helsinki"),
+                Set.of("foo@foo.bar"),
+                kayttaja
         );
     }
 
